updated dockerfile and entrypoint